Change collaboration chapter and add introduction to aSTEP.

--- a/bib.bib
+++ b/bib.bib
@@ -1,4 +1,4 @@
-@article{indoor_bin,
+﻿@article{indoor_bin,
   title={Indoor-A New Data Management Frontier.},
   author={Jensen, Christian S and Lu, Hua and Yang, Bin},
   journal={IEEE Data Eng. Bull.},
@@ -220,4 +220,10 @@
 	title = {PuTTY Download Page},
 	note = {Accessed 8-3-2016},
 	url = {\url{http://www.chiark.greenend.org.uk/~sgtatham/putty/download.html}}
+}
+@MISC{guidelines,
+	author = {Bin Yang},
+	title = {Report Guidelines for the aSTEP Multi-Project},
+	note = {Accessed 14-3-2016},
+	url = {\url{https://www.moodle.aau.dk/pluginfile.php/697817/mod_resource/content/2/Report%20Guidelines%20for%20the%20aSTEP%20SW6%20Multi.pdf}}
 }
