--- a/collaboration/collaboration.tex
+++ b/collaboration/collaboration.tex
@@ -1,19 +1,19 @@
-\chapter{First Collaboration}
+\chapter{Collaborations}
+a quote from the report guidelines for aSTEP\cite{guidelines}: 
+\begin{quote}
+	At least two topic focused chapters describing common activities performed with at least one (maximum three) other group (not the same for each chapter). These chapters can be written together with other groups such that they are identical in the different reports. These chapters should mainly be focus on the final state of affairs and not the steps along the way. They should be the ideal starting point for new developers to continue the development on the system. It is emphasized that a project cannot cover all of the topics listed in the study regulation list and that this should not be penalized. These chapters should be focused on relevant problems in the project, such as:
+	\begin{itemize}
+		\item Project management
+		\item Requirements analysis
+		\item Requirements management
+		\item Prototyping
+		\item Databases
+		\item System architecture, common class diagrams
+		\item Usability; usability design, usability test
+		\item Test and verification; integration test, acceptance test, regression testing, protocol verification
+	\end{itemize}
+\end{quote}
 
-\chapter{Second Collaboration}
-
-
-At least two topic focused chapters describing common activities performed with at least one (maximum three) other group (not the same for each chapter). These chapters can be written together with other groups such that they are identical in the different reports. These chapters should mainly be focus on the final state of affairs and not the steps along the way. They should be the ideal starting point for new developers to continue the development on the system. It is emphasized that a project cannot cover all of the topics listed in the study regulation list and that this should not be penalized. These chapters should be focused on relevant problems in the project, such as:
-
-\begin{itemize}
-	\item Project management
-	\item Requirements analysis
-	\item Requirements management
-	\item Prototyping
-	\item Databases
-	\item System architecture, common class diagrams
-	\item Usability; usability design, usability test
-	\item Test and verification; integration test, acceptance test, regression testing, protocol verification
-\end{itemize}
+This means we need to make at least two collaborations with other aSTEP groups.
 
 \input{collaboration/gitlab}
