--- a/rapport.tex
+++ b/rapport.tex
@@ -17,7 +17,7 @@
 
 %%%% INTRODUCTION %%%%
 \include{introduction/intro}
-
+\include{introduction/aSTEP}
 %\addtocontents{toc}{\protect\newpage}							% Fremtvinger sideskift i ToC hvis noedvendig (der hvor koden placeres)
 
 \mainmatter	\setcounter{page}{1}													% Hovedindhold - nummereres fra side 1
