--- a/introduction/aSTEP.tex
+++ b/introduction/aSTEP.tex
@@ -1,2 +1,4 @@
 \section{aSTEP}
-aSTEP is a project that were present for all the students of sixth semester, approximately half of the students chose to work on aSTEP. The project is divided into smaller group of 3-4 man teams, that each are responsible for a small segment of the whole project, the different area are; User management interface, Database, Indoor service, Outdoor service and applications that going to use the framework. The projects purpose is to provide a framework for locations based service to primary mobile applications, this involves both in- and outdoor location.
+aSTEP is short for Aau's Spatio-TEmporal data management Platform for the mobile web and is intended to be a location based framework for mobile applications. The system will have a database containing information about users and their location, and it will be possible for applications to request this data.
+
+The project is built by 10 small groups of 4 people, each group responsible for a small segment of the whole project. The different areas are, User Management (UM), Database (DB), Indoor Location Based Service (ILBS), Outdoor Location Based Service (OLBS) and applications that going to use the framework.
