--- a/1sprint/cisco.tex
+++ b/1sprint/cisco.tex
@@ -1,5 +1,5 @@
-\section{System for Monitoring Mobile Devices}\label{sec:monitoring}\sfx{new name}
-When monitoring electronic devices in indoor spaces, a set of obstacles are presented. Some of the popular techniques used in outdoor environments prove themselves obsolete or severely hindered when applied in an indoor environment. \sfx{source (Cant find it ask Anders - Oliver)} This can be seen when working with the Global Positioning System(GPS) technology, as obstacles such as walls, roofs and floors will disrupt the signals received from satellites, leading to large imprecisions in the position measurement. As a consequence we need to explore specialized methods for determining positions in indoor spaces.
+\section{Oversee Mobile Devices}\label{sec:monitoring}
+When monitoring electronic devices in indoor spaces, a set of obstacles are presented. Some of the popular techniques used in outdoor environments prove themselves obsolete or severely hindered when applied in an indoor environment. This can be seen when working with the Global Positioning System(GPS) technology, as obstacles such as walls, roofs and floors will disrupt the signals received from satellites, leading to large imprecisions in the position measurement\cite{gps_indoor}. As a consequence we need to explore specialized methods for determining positions in indoor spaces.
 
 In this section we will describe different approaches for indoor positioning and monitoring of mobile devices, and explore systems using these.
 
