--- a/bib.bib
+++ b/bib.bib
@@ -227,3 +227,9 @@
 	note = {Accessed 14-3-2016},
 	url = {\url{https://www.moodle.aau.dk/pluginfile.php/697817/mod_resource/content/2/Report%20Guidelines%20for%20the%20aSTEP%20SW6%20Multi.pdf}}
 }
+@MISC{gps_indoor,
+	author = {Hans Fredrick},
+	title = {Why doesn't GPS Work Inside a Building},
+	note = {Accessed 14-3-2016},
+	url = {\url{http://science.opposingviews.com/doesnt-gps-work-inside-building-18659.html}}
+}
