--- a/introduction/intro.tex
+++ b/introduction/intro.tex
@@ -7,6 +7,6 @@ Don Dodge, developer evangelist at Google, has in his blog \textit{The Next Big 
 \begin{quotation}
 	\textit{'...the most exciting innovation on the horizon.'}\cite{DonDNextBigThing}.
 \end{quotation}
-Google have already invested time and money indoor position systems as they have developed Google Maps which since year 2013 have supported some indoor spaces\cite{google_indoor}. As of 2016 several indoor locations in Denmark is supported by this technology, some of these places are the Copenhagen Airport, Lyngby Storcenter and The National Museum\cite{google_dk}.
+Google have already invested time and money into indoor position systems as they have developed Google Maps which since year 2013 have supported some indoor spaces\cite{google_indoor}. As of 2016 several indoor locations in Denmark is supported by this technology, some of these places are the Copenhagen Airport, Lyngby Storcenter and The National Museum\cite{google_dk}.
 
 We will explore what options there is for modelling indoor spaces and what kind of systems that can be made from indoor location systems.
