Startet writing som Sprint 2
changed intro a little, geo locations and som documentation

--- a/1sprint/chapter_doc.tex
+++ b/1sprint/chapter_doc.tex
@@ -11,6 +11,6 @@ The following chapter describes the initial steps to integrate indoor positionin
 \input{1sprint/cisco_usage}
 
 \section{Sprint evaluation}
-To conclude on the first sprint, we have explored different methods and technologies to perform indoor positioning. Furthermore we have described certain issues related to person sensitive data, and finally we developed a RESTful service to operate as an intermediate service for Cisco MSE. \sfx{initial design}
+To conclude on the first sprint, we have explored different methods and technologies to perform indoor positioning. Furthermore we have described certain issues related to person sensitive data, and finally we developed an initial design of a RESTful service to operate as an intermediate service for Cisco MSE. 
 
 As such the goals for the first sprint have been fulfilled.
