--- a/2sprint/chapter_doc.tex
+++ b/2sprint/chapter_doc.tex
@@ -1,8 +1,12 @@
 \chapter{Sprint 2}
-In this chapter we describe the work done in the second sprint. Since it have been chosen to utilize Cisco, which is available to us at Aalborg University, the main goal for this sprint is to make the connection and send data from Cisco to the aStep database, as can be seen in \cref{fig:cisco_systems}. There will also be focused on unit testing the code and taken time to describe our collaboration with the other groups assigned to the aStep project.
+In this chapter we describe the work done in the second sprint. Since it have been chosen to utilize Cisco, which is available to us at Aalborg University, the main goal for this sprint is to make the connection and send data from Cisco to the aStep database, as it can be seen in \cref{fig:cisco_systems}. There will also be focused on unit testing the code, looked into possibilities to find geographical locations rather than the relative position supplied by Cisco as of now. Finally there will be taken time to describe our collaboration with the other groups assigned to the aStep project.
 
-
+\input{2sprint/geo_locations}
+\input{2sprint/testing}
+\input{2sprint/code_documentation}
 %\section{Relative to real cordiante}
 % {0;0} = {100deg 10' 10'' N; 10deg 20' 20'' E} 
 %person at relative cordinate {120; 25} 
 %Person real cordinate = {100deg 10' 11.2'' N; 10deg 20' 20.25'' E}
+
+\section{Sprint evaluation}
