--- a/bib.bib
+++ b/bib.bib
@@ -1,4 +1,4 @@
-﻿@article{indoor_bin,
+@article{indoor_bin,
   title={Indoor-A New Data Management Frontier.},
   author={Jensen, Christian S and Lu, Hua and Yang, Bin},
   journal={IEEE Data Eng. Bull.},
@@ -238,4 +238,11 @@
 	title = {Global Positioning System (GPS) Standard Positioning Service (SPS) Performance Analysis Report},
 	note = {Accessed 16-3-2016},
 	url = {\url{http://www.nstb.tc.faa.gov/reports/PAN86_0714.pdf#page=22}}
+}
+
+@MANUAL{geo_cisco,
+	title = {Configuring Cisco Prime Infrastructure},
+	author = {Cisco},
+	address = {\url{http://www.cisco.com/c/en/us/td/docs/solutions/Enterprise/Borderless_Networks/Unified_Access/CMX/CMX_Prime.html\#pgfId-1019702}},
+	note = {Accessed: 18-03-2016}
 }
