--- a/2sprint/geo_locations.tex
+++ b/2sprint/geo_locations.tex
@@ -1,6 +1,6 @@
 \section{Geographical Locations}
 It have been requested that the data we supply for the apps are in geographical coordinates, there have therefore been looked into possibilities of doing so.
-As the coordinate given from Cisco are in feet away from the fixed ${0;0}$ point, it would be possible to calculate the geographical location of a device by knowing the coordinate of ${0;0}$. However by using Cisco it is not necessary to do so since there in Cisco is a option of getting the positions in geographical coordinates. This requires at least three and at most 20 coordinates on each map to known. By knowing at least three points Cisco can calculate the position of each device based on the relative coordinate in comparison to the known locations.
+As the coordinate given from Cisco are in feet away from the fixed ${0;0}$ point, it would be possible to calculate the geographical location of a device by knowing the coordinate of ${0;0}$. However by using Cisco it is not necessary to do so since there in Cisco is a option of getting the positions in geographical coordinates. This requires at least three and at most 20 coordinates on each map to known. By knowing at least three points Cisco can calculate the position of each device based on the relative coordinate in comparison to the known locations\cite{geo_cisco}.
 
 
 %http://www.cisco.com/c/en/us/td/docs/solutions/Enterprise/Borderless_Networks/Unified_Access/CMX/CMX_Prime.html#pgfId-1019702
