--- a/1sprint/cisco.tex
+++ b/1sprint/cisco.tex
@@ -42,7 +42,7 @@ The location patterning category sets out to measure the connectivity patterns f
 
 \subsection{Evaluation dimensions}
 When evaluating indoor location services there are three dimensions that we can evaluate quality on: location precision, refresh rate and system latency. Location precision tells us about the location precision that the system affords. Refresh rate is the rate at which the location is updated, and as such how closely the most recent data is related to real-time data. System latency is a dimension describing the time it takes to perform the positioning calculations\cite{dimensions}. Depending on the usage of the system, the dimensions can be valued using a scale of importance, such as "High", "Medium" and "Low". Alternatively we can chose to look for systems with one or more dimensions below a set value. For instance, we have a desire to find a system with a location precision lower than the average precision for GPS which in 2014 was set to have four meters of inaccuracy\ref{gps_report}. 
-\ofx{This should be a cite but it does not compile when I change it}
+\ofx{Should be cite buy cant compile when i change it}
 
 The three dimensions are in no way constant for a system. For most systems, the hardware has a large influence on the dimensions. For instance, location precision for Triangulation is severely diminished if the environment lacks access points. Refresh rate depends on how often mobile devices communicate with the network and system latency can be impacted by a large amount of noise on the WI-FI channels. \Cref{tab:evaluating_approaches} shows the influences for the four tracking approach categories for each evaluation dimension. The system latency of a system entirely depends on the software, hardware and communication protocols used.
 
