Fixed a compile error in bib

--- a/2sprint/unit_test.tex
+++ b/2sprint/unit_test.tex
@@ -14,7 +14,7 @@ This understanding are further enhanced by the documentation that also describes
 This project involves the collaboration between 10 groups to develop the aStep platform. 
 Many of the aStep components communicates with each other by calling methods or sharing data.
 Tests are therefore beneficial as they can be used in debugging situations when big changes are made to the aStep system. 
-Sometimes a change in 
+Sometimes a change in one component will break other other components that are depending on the functio
 
 %Correctness
 
