--- a/bib.bib
+++ b/bib.bib
@@ -234,10 +234,10 @@
 	url = {\url{http://science.opposingviews.com/doesnt-gps-work-inside-building-18659.html}}
 }
 @MISC{gps_report,
-	author = {William J. Hughes Technical Center, NSTB/W AAS T&E Team, Atlantic City International Airport, NJ 08405},
+	author = {William J. Hughes Technical Center and NSTB/W AAS T\&E Team and Atlantic City International Airport and NJ 08405},
 	title = {Global Positioning System (GPS) Standard Positioning Service (SPS) Performance Analysis Report},
 	note = {Accessed 16-3-2016},
-	url = {\url{http://www.nstb.tc.faa.gov/reports/PAN86_0714.pdf#page=22}}
+	adress = {\url{http://www.nstb.tc.faa.gov/reports/PAN86_0714.pdf#page=22}}
 }
 
 @MANUAL{geo_cisco,
