Update on unit_test

--- a/2sprint/unit_test.tex
+++ b/2sprint/unit_test.tex
@@ -14,9 +14,11 @@ This understanding are further enhanced by the documentation that also describes
 This project involves the collaboration between 10 groups to develop the aStep platform. 
 Many of the aStep components communicates with each other by calling methods or sharing data.
 Tests are therefore beneficial as they can be used in debugging situations when big changes are made to the aStep system. 
-Sometimes a change in one component will break other other components that are depending on the functio
+Sometimes a change in one component will break other components in sometimes unforeseen ways such as indirect dependencies.
+When such an error occurs it is helpful to have tests that catch them before the changes are shared with everyone else in the project.
 
 %Correctness
+The tests will also be used to ensure the system provides correct functionality in the form of what they output.
 
 
 %Intern understanding group and project
